--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-infinite-scroller": "^1.2.4",
     "react-markdown": "^5.0.3",
     "react-router-dom": "^5.2.0",
